@@ -1,5 +1,5 @@
                                    Tux Paint
-                                 version 0.9.25
+                                 version 0.9.26
                              Advanced Stamps HOWTO
 
         Copyright 2006-2008 by Albert Cahalan for the Tux Paint project
