@@ -1,5 +1,5 @@
                                    Tux Paint
-                                 version 0.9.25
+                                 version 0.9.26
                            Frequently Asked Questions
 
         Copyright (c) 2002-2020 by various contributors; see AUTHORS.txt
