@@ -1,5 +1,5 @@
                                    Tux Paint
-                                 version 0.9.25
+                                 version 0.9.26
 
 Options Documentation
 
