@@ -21,7 +21,7 @@
             width="205"
             height="210"
             alt="Tux Paint"><br>
-        version 0.9.25
+        version 0.9.26
       </h1>
 
       <p>
