@@ -20,7 +20,7 @@
             width="205"
             height="210"
             alt="Tux&nbsp;Paint"><br>
-        version 0.9.25<br>
+        version 0.9.26<br>
         Frequently Asked Questions
       </h1>
 
