@@ -17,7 +17,7 @@
     <center>
       <h1>
         Tux&nbsp;Paint<br>
-        version 0.9.25
+        version 0.9.26
       </h1>
 
       <h2>
