@@ -1,5 +1,5 @@
 .\" tuxpaint.1 - 2020.12.27
-.TH TUXPAINT 1 "27 December 2020" "0.9.25" "Tux Paint"
+.TH TUXPAINT 1 "27 December 2020" "0.9.26" "Tux Paint"
 .SH NAME
 tuxpaint -- "Tux Paint", a drawing program for young children.
 
